...
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp
import jp.speakbuddy.factsearcher.R
import java.util.Locale

const val LANGUAGE_WIDGET_ICON = "LANGUAGE_WIDGET_ICON"
const val LANGUAGE_WIDGET_ITEM_JP = "LANGUAGE_WIDGET_ITEM_JP"

@Composable
fun LanguageWidget(
    currentLocale: Locale?,
    locales: List<Locale>,
    onLocaleSelected: (Locale) -> Unit
...
