...
import jp.speakbuddy.factsearcher.ui.data.FactUiModel
import jp.speakbuddy.factsearcher.ui.theme.LocalCustomColorsPalette
import jp.speakbuddy.factsearcher.ui.widget.ErrorPopup
import jp.speakbuddy.factsearcher.ui.widget.FactWidget
import java.util.Locale

const val FACT_SCREEN_FAVORITE_BUTTON_TAG = "FACT_SCREEN_FAVORITE_BUTTON_TAG"
const val FACT_SCREEN_UPDATE_FACT_BUTTON_TAG = "FACT_SCREEN_UPDATE_FACT_BUTTON_TAG"

@Composable
fun FactActivityScreen(
    factData: FactUiModel,
    isFactFavorite: Boolean,
    isLoading: Boolean,
...
